LAP_101.html 재업로드

--- a/work/IIP_150.html
+++ b/work/IIP_150.html
@@ -125,7 +125,7 @@
                             <dl>
                                 <dt><label for="srchA">교육 시작일</label></dt>
                                 <dd class="flex-ac period flexible-width">
-                                    <input type="date" class="date" placeholder="">
+                                    <input type="date" class="date">
                                     -
                                     <input type="date" class="date" placeholder="">
                                 </dd>
@@ -231,6 +231,7 @@
                 <div class="top-info-group">
                     <p class="top-info-group-data">총 <strong>6,456</strong>건</p>
                     <div class="btn-wrap">
+                        <button type="button" class="btns bg-blue">등록</button>
                         <button type="button" class="btns bg-blue">엑셀 다운로드</button>
                     </div>
                 </div>
@@ -306,7 +307,9 @@
                                 </td>
                                 <td>교육완료</td>
                             </tr>
-
+                            <tr>
+                                <td colspan="8">교육 과정이 없습니다.</td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
