--- a/work/IIP_151.html
+++ b/work/IIP_151.html
@@ -214,7 +214,7 @@
                                     <button type="button" class="btn-search">검색</button>
                                 </div>
                             </td>
-                            <td class="txt-c">2024.03.15</td>
+                            <td class="txt-c">2024-03-15</td>
                         </tr>
                         <tr>
                             <td>
@@ -223,7 +223,7 @@
                                     <button type="button" class="btn-search">검색</button>
                                 </div>
                             </td>
-                            <td class="txt-c">2024.03.15</td>
+                            <td class="txt-c">2024-03-15</td>
                         </tr>
                         <tr>
                             <td>
@@ -232,7 +232,7 @@
                                     <button type="button" class="btn-search">검색</button>
                                 </div>
                             </td>
-                            <td class="txt-c">2024.03.15</td>
+                            <td class="txt-c">2024-03-15</td>
                         </tr>
                     </tbody>
                 </table>
@@ -339,7 +339,7 @@
                                     <tr>
                                         <td>1111-****-****-1212</td>
                                         <td>20,000</td>
-                                        <td>2024.09.12 14:12:22</td>
+                                        <td>2024-09-12 14:12:22</td>
                                         <td>홍길동</td>
                                         <td>99.12.12</td>
                                     </tr>
