--- a/work/IIP_152.html
+++ b/work/IIP_152.html
@@ -140,10 +140,10 @@
                     <tbody>
                         <tr>
                             <th class="txt-l"><label for="srch02">과정명</label></th>
-                            <td><input type="text" id="srch02" class="readonly-txt" value="과정명" readonly /></td>
+                            <td><input type="text" id="srch02" value="과정명" readonly /></td>
                             <th class="txt-l"><label for="srch03">교육기간</label></th>
                             <td class="flex-ac">
-                                <input type="text" id="srch03" class="readonly-txt" value="2024. 12. 12" readonly /><span class="dash">-</span><input type="text" class="readonly-txt" value="2024. 12. 12" readonly /></td>
+                                <input type="text" id="srch03" value="2024-12-12" readonly /><span class="dash">-</span><input type="text" class="readonly-txt" value="2024-12-12" readonly /></td>
                         </tr>
                         <tr>
                             <th class="txt-l"><label for="srch04">온/오프<br>(교육방법)</label></th>
@@ -264,7 +264,7 @@
                         <tr>
                             <td>서울시</td>
                             <td>홍길동</td>
-                            <td>2024.12.01</td>
+                            <td>2024-12-01</td>
                             <td>100,000</td>
                             <td>디지털</td>
                             <td>미이수</td>
@@ -273,7 +273,7 @@
                         <tr>
                             <td>서울시</td>
                             <td>홍길동</td>
-                            <td>2024.12.01</td>
+                            <td>2024-12-01</td>
                             <td>100,000</td>
                             <td>디지털</td>
                             <td>미이수</td>
@@ -297,7 +297,7 @@
                     </colgroup>
                     <tbody>
                         <tr>
-                            <th rowspan="3" class="txt-l">결과 증빙자료<br>(출석부 등)</th>
+                            <th rowspan="3" class="txt-l must-type">결과 증빙자료<br>(출석부 등)</th>
                             <td>
                                 <div class="filebox flex-ac">
                                     <input class="upload-name fixed-value">
@@ -412,7 +412,7 @@
                                     <tr>
                                         <td>1111-****-****-1212</td>
                                         <td>20,000</td>
-                                        <td>2024.09.12 14:12:22</td>
+                                        <td>2024-09-12 14:12:22</td>
                                         <td>홍길동</td>
                                         <td>99.12.12</td>
                                     </tr>
