--- a/work/IIP_153.html
+++ b/work/IIP_153.html
@@ -144,7 +144,7 @@
                             <td><input type="text" id="srch02" class="readonly-txt" value="과정명" readonly /></td>
                             <th class="txt-l"><label for="srch03">교육기간</label></th>
                             <td class="flex-ac">
-                                <input type="text" id="srch03" class="readonly-txt" value="2024. 12. 12" readonly /><span class="dash">-</span><input type="text" class="readonly-txt" value="2024. 12. 12" readonly /></td>
+                                <input type="text" id="srch03" class="readonly-txt" value="2024-12-12" readonly /><span class="dash">-</span><input type="text" class="readonly-txt" value="2024-12-12" readonly /></td>
                         </tr>
                         <tr>
                             <th class="txt-l"><label for="srch04">온/오프<br>(교육방법)</label></th>
@@ -159,7 +159,7 @@
                             <td><input type="text" id="srch05" class="readonly-txt" value="46" readonly /></td>
                         </tr>
                         <tr>
-                            <th class="txt-l must-type">7대 영역</th>
+                            <th class="txt-l">7대 영역</th>
                             <td colspan="3" class="type-wrap">
                                 <div class="flex-ac divide">
                                     <div class="chk-box">
@@ -197,7 +197,7 @@
                 </table>
             </div>
             <div class="top-info-group">
-                <h3 class="must-type">이수 현황</h3>
+                <h3>이수 현황</h3>
                 <small><em class="color-red">*</em> 예시 양식 확인 후 xlsx 파일 업로드가 필요합니다.</small>
             </div>
             <div class="com-view-table">
@@ -265,7 +265,7 @@
                         <tr>
                             <td>서울시</td>
                             <td>홍길동</td>
-                            <td>2024.12.01</td>
+                            <td>2024-12-01</td>
                             <td>100,000</td>
                             <td>디지털</td>
                             <td>미이수</td>
@@ -274,7 +274,7 @@
                         <tr>
                             <td>서울시</td>
                             <td>홍길동</td>
-                            <td>2024.12.01</td>
+                            <td>2024-12-01</td>
                             <td>100,000</td>
                             <td>디지털</td>
                             <td>미이수</td>
@@ -287,7 +287,7 @@
                 </table>
             </div>
             <div class="top-info-group">
-                <h3>증빙자료 (출석부 등)</h3>
+                <h3>결과 증빙자료(출석부 등)</h3>
             </div>
             <div class="com-write-table">
                 <table class="basic-info">
@@ -298,7 +298,7 @@
                     </colgroup>
                     <tbody>
                         <tr>
-                            <th rowspan="3" class="txt-l">결과 증빙자료<br>(출석부 등)</th>
+                            <th rowspan="3" class="txt-l must-type">결과 증빙자료<br>(출석부 등)</th>
                             <td>
                                 <div class="filebox flex-ac">
                                     <input class="upload-name fixed-value">
@@ -443,7 +443,7 @@
                                     <tr>
                                         <td>1111-****-****-1212</td>
                                         <td>20,000</td>
-                                        <td>2024.09.12 14:12:22</td>
+                                        <td>2024-09-12 14:12:22</td>
                                         <td>홍길동</td>
                                         <td>99.12.12</td>
                                     </tr>
