--- a/work/IIP_200.html
+++ b/work/IIP_200.html
@@ -148,12 +148,12 @@
                     <table>
                         <caption>사용기관 교육과정 정보 테이블</caption>
                         <colgroup>
-                            <col>                                
-                            <col style="width:8%;">
+                            <col style="width: auto;">                                
+                            <col style="width: 7%;">
                             <col style="width:10%;">
                             <col style="width:12%;">
-                            <col style="width:10%;">                                
-                            <col style="width:10%;">
+                            <col style="width:auto">                                
+                            <col style="width:auto">
                             <col style="width:10%;">
                             <col style="width:10%;">
                             <col style="width:12%;">
@@ -164,7 +164,7 @@
                                 <th>강좌명</th>
                                 <th>분반</th>
                                 <th>교육방법</th>
-                                <th>고육일수/<br>시간/회차</th>
+                                <th>교육일수/<br>시간/회차</th>
                                 <th>강좌시작일</th>
                                 <th>강좌종료일</th>
                                 <th>수강료</th>
@@ -178,9 +178,9 @@
                                 <td>평생교육강좌</td>
                                 <td>1</td>
                                 <td>온라인</td>
-                                <td>1234234</td>
-                                <td>2023.09.01</td>
-                                <td>2023.09.23</td>
+                                <td>1일</td>
+                                <td>2023-09-01</td>
+                                <td>2023-09-23</td>
                                 <td>100,000원</td>
                                 <td>30명</td>
                                 <td>0명</td>
@@ -190,13 +190,16 @@
                                 <td>평생교육강좌</td>
                                 <td>1</td>
                                 <td>온라인</td>
-                                <td>1234234</td>
-                                <td>2023.09.01</td>
-                                <td>2023.09.23</td>
+                                <td>1일</td>
+                                <td>2023-09-01</td>
+                                <td>2023-09-23</td>
                                 <td>100,000원</td>
                                 <td>30명</td>
                                 <td>0명</td>
                                 <td>0</td>
+                            </tr>
+                            <tr>
+                                <td colspan="10">교육과정 정보가 없습니다.</td>
                             </tr>
                         </tbody>
                     </table>
