--- a/work/IIP_201.html
+++ b/work/IIP_201.html
@@ -109,7 +109,7 @@
                             <th class="txt-l">사용자 정보 제공</th>
                             <td>비노출</td>   
                             <th class="txt-l">강좌 시작일/<br>종료일</th>
-                            <td>2023.08.01 ~ 2023.09.01</td>
+                            <td>2023-08-01 ~ 2023-09-01</td>
                         </tr>
                         <tr>
                             <th class="txt-l">강좌분류</th>
@@ -158,10 +158,10 @@
                             <td>12,000원</td>
                         </tr>
                         <tr>
-                            <th class="txt-l">교육추가(기간)</th>
+                            <th class="txt-l">교육주기(기간)</th>
                             <td>30일</td>
                             <th class="txt-l">사전보고 일자</th>
-                            <td>2023.08.01</td>
+                            <td>2023-08-01</td>
                         </tr>
                         <tr>
                             <th class="txt-l">강좌소개</th>
@@ -213,7 +213,7 @@
             </div>
             <div class="com-view-table">
                 <table>
-                    <caption>강좌정보 테이블</caption>
+                    <caption>학습자 정보 테이블</caption>
                     <colgroup>
                         <col style="width: 10%;">
                         <col style="width: 18%;">
@@ -237,7 +237,7 @@
                             <td>1</td>
                             <td>디지털</td>
                             <td>홍길동</td>
-                            <td>1989.02.12</td>
+                            <td>1989-02-12</td>
                             <td>10일</td>
                             <td>이수중</td>
                         </tr>
@@ -245,17 +245,20 @@
                             <td>1</td>
                             <td>서울특별시</td>
                             <td>홍길순</td>
-                            <td>2010.11.12</td>
+                            <td>2010-11-12</td>
                             <td>12일</td>
                             <td>이수중</td>
+                        </tr>
+                        <tr>
+                            <td colspan="6">학습자 정보가 없습니다.</td>
                         </tr>
                     </tbody>
                 </table>
                 <p class="bullet">이수여부는 80%이상 출석여부에 따라 자동 계산되며, 학습자의 출석일수 저장 시 강좌의 총교육일수는 수정이 불가합니다.</p>
                 <div class="btns-bottom">
                     <a href="#" class="btn btns">목록</a>
-                    <a href="#" class="btn btn-bd">수정</a>
                     <button type="button" class="btn btn-bd">삭제</button>
+                    <a href="#" class="btn btn-bd">수정</a>
                 </div>
             </div>
         </div>
