--- a/work/IIP_205.html
+++ b/work/IIP_205.html
@@ -350,7 +350,7 @@
                             <td>1</td>
                             <td>디지털</td>
                             <td>홍길동</td>
-                            <td>1989.02.12</td>
+                            <td>1989-02-12</td>
                             <td class="day"><input type="text"> 일</td>
                             <td>이수중</td>
                             <td class="btn-wrap">
@@ -362,7 +362,7 @@
                             <td>1</td>
                             <td>디지털</td>
                             <td>홍길동</td>
-                            <td>1989.02.12</td>
+                            <td>1989-02-12</td>
                             <td class="day"><input type="text"> 일</td>
                             <td>이수중</td>
                             <td class="btn-wrap">
@@ -493,7 +493,7 @@
                                         <td>승인</td>
                                         <td>1111-****-****-1212</td>
                                         <td>85,000</td>
-                                        <td>2024.09.12 14:12:22</td>
+                                        <td>2024-09-12 14:12:22</td>
                                         <td>홍길동</td>
                                         <td>99.12.12</td>
                                         <td><button class="btns bg-blue" onclick="$('[data-pop=notConfirm]').show();">등록</button></td>
@@ -523,9 +523,9 @@
                     </div>
                     <ul class="layer-text-list">
                         <li class="layer-text-tit color-red">※ 학습자 정보 추가 전 유의사항</li>
-                        <li class="layer-text-desc">- <em class="color-blue">이용권 카드 본인사용 확인</em>(카드결제 정보내 이름과 실제 수강자명 일치여부 확인</li>
-                        <li class="layer-text-desc">- 평생교육강좌 수강료 및 이에 해당하는 교재 외 결제, 등록불가(교재 단독 결제 불가)</li>
-                        <li class="layer-text-desc" >평생교육이용권 본인외 사용 및 목적외 사용 확인시 이용자 안내 후 카드 취소 처리 요청</li>
+                        <li class="layer-text-desc"><span class="dash">-</span> <em class="color-blue">이용권 카드 본인사용 확인</em>(카드결제 정보내 이름과 실제 수강자명 일치여부 확인)</li>
+                        <li class="layer-text-desc"><span class="dash">-</span> 평생교육강좌 수강료 및 이에 해당하는 교재 외 결제, 등록불가(교재 단독 결제 불가)</li>
+                        <li class="layer-text-desc">평생교육이용권 본인외 사용 및 목적외 사용 확인시 이용자 안내 후 카드 취소 처리 요청</li>
                     </ul>
                 </div>
                 <button class="close-btn" onclick="$('[data-pop=learn-info]').hide();">
@@ -561,7 +561,7 @@
                                     <td>1,000원</td>
                                     <th scope="row" class="txt-l">승인일시</th>
                                     <td>
-                                        2024.09.04<br>
+                                        2024-09-04<br>
                                         08:45:01
                                     </td>
                                 </tr>
@@ -695,8 +695,8 @@
     <div class="layer-pop" data-pop="six-category">
         <div class="layer-content" style="--max-width: 1200px">
             <div class="layer-scroll">
-                <span class="title">평생교육프로그램 6대 영역별 분류</span>
-                <div class="info-area">
+                <span class="title">평생교육프로그램 7대 영역별 분류</span>
+                <div class="info-area six-category">
                     <div class="table-box mg-0">
                         <div class="com-view-table">
                             <table>
@@ -707,38 +707,250 @@
                                         <th rowspan="2">프로그램 예시</th>
                                     </tr>
                                     <tr>
-                                        <th>6대영역</th>
+                                        <th>7대영역</th>
                                         <th>정의</th>
                                         <th>하위영역</th>
                                         <th class="border-d8-r">정의</th>
                                     </tr>
                                 </thead>
                                 <tbody>
+                                    <!-- 기초문해교육 -->
                                     <tr>
                                         <td rowspan="3">기초문해교육<br>(언어적 기초와 활용)</td>
-                                        <td rowspan="3">한글을 읽고, 쓸 수 있도록 하는 문자해독능력과 생활속에서 직면한 문제를 해결하고 주어진 과업을 수행할 수 있는 문해활용능력을 개발하는 평생교육</td>
+                                        <td rowspan="3">
+                                            한글을 읽고, 쓸 수 있도록 하는 문자해득능력과 생활 속에서 
+                                            직면한 문제를 해결하고 주어진 과업을 수행할 수 있는 문해활용능력을 개발하는 평생교육
+                                        </td>
                                         <td>내국인 한글문해 프로그램</td>
-                                        <td>비문해자가 한글을 읽고, 쓸 수 있는 문자해독능력을 도울 체계적으로 지도하는 프로그램</td>
-                                        <td>어르신한글교실, 찾아가는한글교실, 한글교실(초급·중급) 등</td>
+                                        <td>
+                                            비문해자가 한글을 읽고, 쓸 수 있는 문자해득능력을 갖도록 체계적으로 지도하는 프로그램
+                                        </td>
+                                        <td>
+                                            어르신한글교실, 찾아가는한글교실, 한글교실(초급·중급) 등
+                                        </td>
                                     </tr>
                                     <tr>
                                         <td>다문화 한글문해 프로그램</td>
-                                        <td>다문화 외국인이 한글을 읽고, 쓸 수 있는 문자해독능력을 갖도록 체계적으로 지도하는 프로그램</td>
-                                        <td>외국인 한글교실, 다문화가족문해교실, 귀화인한국어교육과정 등</td>
+                                        <td>
+                                            다문화 외국인이 한글을 읽고, 쓸 수 있는 문자해득능력을 갖도록 체계적으로 지도하는 프로그램
+                                        </td>
+                                        <td>
+                                            외국인 한글교실, 다문화가족문해교실, 귀화인한국어교육과정 등
+                                        </td>
                                     </tr>
                                     <tr>
                                         <td>한글생활문해 프로그램</td>
-                                        <td>문자해독 후 한글을 응용하여 직면한 문제를 해결하고 주어진 과업을 수행할 수 있는 기초생활 교육을 지원하는 프로그램</td>
-                                        <td>한글 응용교육, 문해학습자 기초컴퓨터 활용교육, 기초영어교육, 한글인증시험 준비교육과정 등</td>
+                                        <td>
+                                            문자해득 후 한글을 응용하여 직면한 문제를 해결하고 주어진 과업을 수행할 수 있는 기초생활 교육을 지원하는 프로그램
+                                        </td>
+                                        <td>
+                                            한글 응용교육, 문해학습자 기초컴퓨터활용교육, 기초영어교육, 한글인증시험 준비교육과정 등
+                                        </td>
+                                    </tr>
+                                    <!-- 학력보완교육 -->
+                                    <tr>
+                                        <td rowspan="3">학력보완교육<br>(학력 조건과 인증)</td>
+                                        <td rowspan="3">
+                                            초·중등교육법, 고등교육법, 평생교육법에 명시된 소정의 학력을 
+                                            인정받기 위해 필요한 이수단위 및 학점과 관련된 학력인증 평생교육
+                                        </td>
+                                        <td>초등학력보완 프로그램</td>
+                                        <td>
+                                            초등학력의 보완 및 인증 규정에 의해 평생교육시설 및 기관에서 운영되는 소정의 프로그램
+                                        </td>
+                                        <td>
+                                            중입검정고시강좌, 초등학력인증강좌, 초등교과연계강좌 등
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>중등학력보완 프로그램</td>
+                                        <td>
+                                            중·고등학교 학력의 보완 및 인증 규정에 의해 평생교육시설 및 기관에서 운영되는 소정의 프로그램
+                                        </td>
+                                        <td>
+                                            고입검정고시강좌, 대입검정고시 강좌, 중고생교과연계강좌, 진로강좌 등
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>고등학력보완 프로그램</td>
+                                        <td>
+                                            전문학사 및 학사 학력의 인증 규정에 의해 평생교육시설 및 기관에서 운영되는 소정의 프로그램
+                                        </td>
+                                        <td>
+                                            독학사강좌, 학점은행제강좌, 시간제등록강좌, 대학 비학점강좌 등
+                                        </td>
+                                    </tr>
+                                    <!-- 직업능력교육 -->
+                                    <tr>
+                                        <td rowspan="3">직업능력교육<br>(직업준비와 직무역량개발)</td>
+                                        <td rowspan="3">
+                                            직업에 필요한 자격과 조건을 체계적으로 준비하고, 주어진 
+                                            역할과 직무를 효과적으로 수행할 수 있도록 지원하는 평생교육
+                                        </td>
+                                        <td>직업준비 프로그램</td>
+                                        <td>
+                                            취업 및 창업에 필요한 지식, 정보, 기술, 기능을 획득하고 
+                                            관련 조건을 체계적으로 준비할 수 있도록 지원하는 프로그램 
+                                        </td>
+                                        <td>
+                                            인력양성과정, 창업관련과정, 취업준비과정, 재취업정보교육 등
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>자격인증 프로그램</td>
+                                        <td>
+                                            특정 직업의 직무수행에 필요한 전문적인 지식, 기술, 기능이 
+                                            일정한 수준에 도달하여 소정의 자격을 제도적으로 인증받을 수 있도록 지원하는 프로그램
+                                        </td>
+                                        <td>
+                                            외국어자격인증, 지도사양성과정, 자격인증과정, 자격증취득과정 
+                                            (예: 운전면허자격취득과정 등), 디지털정보활용능력인증과정, 토익·토플강좌 등
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>현직직무역량 프로그램</td>
+                                        <td>
+                                            현직 종사자에게 보다 발전적인 직무수행에 필요한 관련 지식과 정보를 획득하게 하며, 
+                                            관련 기술과 기능을 습득하고 익힐 수 있도록 지원하는 프로그램
+                                        </td>
+                                        <td>
+                                            공통직무연수과정, 전문직무연수과정 (예: 평생교육사연수), 경력개발과정 등
+                                        </td>
+                                    </tr>
+                                    <!-- 문화예술교육 -->
+                                    <tr>
+                                        <td rowspan="3">문화예술교육<br>(문화예술향유와 활용)</td>
+                                        <td rowspan="3">
+                                            문화예술적 상상력과 창의력을 촉진하고 문화예술 행위와
+                                            기능을 숙련시키는 일련의 과정과 일상생활 속에서 문화예술을
+                                            향유하고 접목할 수 있는 능력을 개발하는 평생교육
+                                        </td>
+                                        <td>레저생활스포츠 프로그램</td>
+                                        <td>체력증진 및 여가선용을 위하여 일상생활 속에서 지속적으로 행하는 체육활동 및 전문적 스포츠 관련 프로그램</td>
+                                        <td>
+                                            레저활동강좌, 생활스포츠강좌
+                                            (예: 필라테스·요가강좌), 스포츠예술활동 등
+                                            (예: 벨리댄스교실)
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>생활문화예술 프로그램</td>
+                                        <td>
+                                            문화예술을 일상생활에 접목하여 생활문화의 질을 향상시키고, 
+                                            삶의 문화를 보다 풍성하게 향유할 수 있도록 지원하는 프로그램
+                                        </td>
+                                        <td>
+                                            풍선아트강좌, 사진예술강좌, 천연염색강좌, 생활공예강좌, 
+                                            노래교실강좌, 천연화장품만들기, 인테리어홈패션 등
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>문화예술향상 프로그램</td>
+                                        <td>
+                                            문화예술작품 및 행위를 의미있게 체험하고 문화예술적 가치가 
+                                            높은 작품을 완성할 수 있도록 체계적으로 지도하는 프로그램
+                                        </td>
+                                        <td>음악·무용, 미술·서예 지도, 문화예술 체험, 도자기·공예 등</td>
+                                    </tr>
+                                    <!-- 인문교양교육 -->
+                                    <tr>
+                                        <td rowspan="3">인문교양교육<br>(교양확장 및 소양개발)</td>
+                                        <td rowspan="3">
+                                            특정 직업에 필요한 전문지식 및 기술 획득을 위한 학습보다는 
+                                            교양을 갖춘 현대인으로서 전인적인 성품과 다양한 소양을 개발하고, 
+                                            신체적ㆍ정신적 건강을 겸비할 수 있도록 지원하는 평생교육
+                                        </td>
+                                        <td>건강심성 프로그램</td>
+                                        <td>
+                                            현대사회에서 건강한 삶과 생활을 위한 심리적 안정을 촉진하며 
+                                            신체 건강에 필요한 활동과 체험을 체계적으로 지원하는 프로그램
+                                        </td>
+                                        <td>
+                                            심리상담, 종교교육, 
+                                            식생활교육, 생활의료교육, 
+                                            웰빙 및 보건교육 등
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>기능적 소양 프로그램</td>
+                                        <td>
+                                            일상생활의 적절한 역할수행과 현대인이 갖추어야 할 다양한 소양과 
+                                            관련된 기능적 자질과 능력을 개발하며 실천하도록 지원하는 프로그램
+                                        </td>
+                                        <td>
+                                            역할수행교육, 예절교육, 가정생활교육, 생활외국어, 생활한자 등
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>인문학적 교양 프로그램</td>
+                                        <td>
+                                            전인적 품성과 지혜를 갖춘 현대인으로서 인문학적 교양과 상식을 확장하고, 
+                                            문학‧역사‧철학과 관련된 체험과 활동을 체계적으로 지원하는 프로그램 
+                                        </td>
+                                        <td>
+                                            일반문학강좌, 과학일반강좌, 역사‧전통강좌, 철학‧행복학강좌, 독서강좌 등
+                                        </td>
+                                    </tr>
+                                    <!-- 시민참여교육 -->
+                                    <tr>
+                                        <td rowspan="3">시민참여교육<br>(사회적 책무성과 공익적 활용)</td>
+                                        <td rowspan="3">
+                                            민주시민으로서 갖추어야 할 자질과 역량을 개발하며, 사회통합 및 
+                                            공동체 형성과 관련하여 시민참여를 촉진하고 지원하는 평생교육
+                                        </td>
+                                        <td>시민책무성 프로그램</td>
+                                        <td>
+                                            시민으로서 갖추어야 할 사회적 책무성을 개발하며 
+                                            사회통합 및 공동체 형성을 촉진 및 지원하는 프로그램
+                                        </td>
+                                        <td>
+                                            인권교육, 양성평등교육, 다문화이해, 환경생태체험강좌, 주민자치교육, 지역이해교육 등
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>시민리더역량 프로그램</td>
+                                        <td>
+                                            국가 및 지역사회의 공익적 사업을 효과적으로 추진할 수 있는 시민을 발굴·육성하고 
+                                            그들의 자질과 역량을 개발하고 인증하는 프로그램
+                                        </td>
+                                        <td>
+                                            지역리더양성, 평생학습리더양성, 평생학습상담자양성, NGO(NPO)지도자과정, 지역역사문화해설사과정 등
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>시민참여활동 프로그램</td>
+                                        <td>
+                                            사회의 구성원으로서 지역사회조직 및 공익적 사업에 대한 개인적‧집단적인 참여를 촉진하고 
+                                            평생학습 참여기회를 지원하는 프로그램
+                                        </td>
+                                        <td>
+                                            학습동아리교육, 평생교육자원봉사, 환경실천교육, 평생학습네트워크 등
+                                        </td>
+                                    </tr>
+                                    <!-- 성인 진로 교육 -->
+                                    <tr>
+                                        <td rowspan="3">성인진로교육<br>(성인 진로개발역량 향상교육)</td>
+                                        <td rowspan="3">
+                                            성인이 자신에게 적합한 직업을 찾고 진로를 인식ㆍ탐색ㆍ준비ㆍ결정 
+                                            및 관리할 수 있도록 진로수업ㆍ진로심리검사ㆍ진로상담ㆍ진로정보ㆍ진로체험 및 취업지원 등을 제공하는 활동
+                                        </td>
+                                        <td rowspan="3">-</td>
+                                        <td rowspan="3">-</td>
+                                        <td rowspan="3">진로수업, 진로심리검사, 진로상담, 진로정보, 진로체험 등 </td>
                                     </tr>
                                 </tbody>
                             </table>
                         </div>
                     </div>
                     <div class="layer-btn-wrap">
-                        <button class="btns" onclick="$('[data-pop=six-category]').hide();">닫기</button>
+                        <button class="btns" onclick="$('[data-pop=six-category]').hide();">확인</button>
                     </div>
                 </div>
+                <button class="close-btn" onclick="$('[data-pop=six-category]').hide();">
+                    <span class="blind">
+                    레이어 팝업 닫기
+                    </span>
+                </button>
             </div>
         </div>
     </div>
