--- a/work/IIP_300.html
+++ b/work/IIP_300.html
@@ -127,8 +127,8 @@
                     <colgroup>
                         <col style="width:10%;">
                         <col style="width:12%;">
-                        <col style="width:12%;">
-                        <col>
+                        <col style="width:auto;">
+                        <col style="width:22%">
                         <col style="width:12%;">                                
                         <col style="width:10%;">
                         <col style="width:9%;">
@@ -141,7 +141,7 @@
                             <th>사용기관명</th>
                             <th>강좌명</th>
                             <th>강좌기간</th>
-                            <th>이용권구분</th>
+                            <th>이용권 유형</th>
                             <th>학습자명</th>
                             <th>생년월일</th>
                             <th>출석</th>
@@ -153,7 +153,7 @@
                             <td>2024</td>
                             <td>한국어교육기관</td>
                             <td>한국어음운룬</td>
-                            <td>2024.01.01 ~ 2024.12.12</td>
+                            <td>2024-01-01 ~ 2024-12-12</td>
                             <td>서울시 광진구</td>
                             <td>홍길*</td>
                             <td>00.01.**</td>
@@ -164,7 +164,7 @@
                             <td>2024</td>
                             <td>한국어교육기관</td>
                             <td>한국어음운룬</td>
-                            <td>2024.01.01 ~ 2024.12.12</td>
+                            <td>2024-01-01 ~ 2024-12-12</td>
                             <td>서울시 광진구</td>
                             <td>홍길*</td>
                             <td>00.01.**</td>
@@ -172,7 +172,7 @@
                             <td>이수중</td>
                         </tr>
                         <tr>
-                            <td colspan="8">학습자 정보가 없습니다.</td>
+                            <td colspan="9">학습자 정보가 없습니다.</td>
                         </tr>
                     </tbody>
                 </table>
