--- a/work/IIP_501.html
+++ b/work/IIP_501.html
@@ -146,7 +146,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <th class="txt-l">첨부파일</th>
+                            <th class="txt-l">파일첨부</th>
                             <td>
                                 <div class="filebox">
                                     <input class="upload-name">
