--- a/work/IIP_502.html
+++ b/work/IIP_502.html
@@ -119,7 +119,7 @@
                             <th class="txt-l">글내용</th>
                             <td colspan="3">
                                 <div class="txt-view-box">
-                                    
+                                    <p>지역이용권 문의드립니다.</p>
                                 </div>
                             </td> 
                         </tr>
