--- a/work/IIP_600.html
+++ b/work/IIP_600.html
@@ -91,7 +91,7 @@
             </div>
             <ul class="txt-list">
                 <li><strong>참여목적 : </strong>평생교육이용권 사용기관 업무 효율성 및 정보보호 인식 제고</li>
-                <li><strong>참여일정 : </strong>2024.11.14(월)~2024.12.30(금)</li>
+                <li><strong>참여일정 : </strong>2024-11-14(월)~2024-12-30(금)</li>
                 <li><strong>참여방법 : </strong>아래 교육프로그램 바로가기 클릭</li>
                 <li><strong>참고사항 : </strong>바로가기 버튼을 클릭해도 이동하지 않을 경우 <a class="color-primary" href="https:/www.test.co.kr" target="_blank" >https:/www.test.co.kr</a>로 이동해주세요.</li>
             </ul>
