--- a/work/IIP_800.html
+++ b/work/IIP_800.html
@@ -103,7 +103,7 @@
                             <th class="txt-l">접수번호</th>
                             <td>2024-00121</td>
                             <th class="txt-l">신청상태</th>
-                            <td>신청</td>
+                            <td><button type="button" class="btns bg-blue">신청</button></td>
                         </tr>
                         <tr>
                             <th class="txt-l">반려 사유</th>
@@ -111,7 +111,7 @@
                         </tr>
                         <tr>
                             <th class="txt-l">신청일</th>
-                            <td>2024.11.11</td>
+                            <td>2024-11-11</td>
                             <th class="txt-l">처리일</th>
                             <td></td>
                         </tr>
@@ -297,9 +297,9 @@
                             <th class="txt-l"><label for="aa">검색 키워드</label></th>
                             <td class="input-group search-keyword view" colspan="5">
                                 <div class="flex-ac">
-                                    <input type="text" id="aa" class="fixed-width" value="키워드1"  readonly>
-                                    <input type="text" class="fixed-width" value="키워드2" readonly>
-                                    <input type="text" class="fixed-width" value="키워드3" readonly>
+                                    <input type="text" id="aa" class="fixed-width readonly-txt" value="키워드1"  readonly>
+                                    <input type="text" class="fixed-width readonly-txt" value="키워드2" readonly>
+                                    <input type="text" class="fixed-width readonly-txt" value="키워드3" readonly>
                                 </div>
                             </td>
                         </tr>
@@ -379,7 +379,7 @@
                         </tr>
                         <tr>
                             <th class="txt-l">등록일자</th>
-                            <td>2024.03.15</td>
+                            <td>2024-03-15</td>
                             <th class="txt-l"><label for="z">등록 건수</label></th>
                             <td>1</td>
                         </tr>
@@ -400,12 +400,22 @@
                     <tbody>
                         <tr>
                             <th class="txt-l">사업자등록증/고유번호증</th>
-                            <td>이미지 2. jpg[114615 byte]</td>
+                            <td>
+                                <div class="flex-ac">
+                                    이미지 2. jpg[114615 byte]
+                                    <button type="button" class="btn-search">검색</button>
+                                </div>
+                            </td>
                             <td class="txt-c">2024.03.15</td>
                         </tr>
                         <tr>
                             <th class="txt-l">평생교육기관 증빙서류</th>
-                            <td>이미지 2. jpg[114615 byte]</td>
+                            <td>
+                                <div class="flex-ac">
+                                    이미지 2. jpg[114615 byte]
+                                    <button type="button" class="btn-search">검색</button>
+                                </div>
+                            </td>
                             <td class="txt-c">2024.03.15</td>
                         </tr>
                         <tr>
@@ -413,7 +423,10 @@
                                 2024년 평생교육강좌<br>
                                 운영계획서
                             </th>
-                            <td>이미지 2. jpg[114615 byte]</td>
+                            <td><div class="flex-ac">
+                                이미지 2. jpg[114615 byte]
+                                <button type="button" class="btn-search">검색</button>
+                            </div></td>
                             <td class="txt-c">2024.03.15</td>
                         </tr>
                         <tr>
@@ -421,7 +434,12 @@
                                 운영계획 증빙자료 <br>
                                 (교육청 신고내역, 기관정관 등)
                             </th>
-                            <td>이미지 2. jpg[114615 byte]</td>
+                            <td>
+                                <div class="flex-ac">
+                                    이미지 2. jpg[114615 byte]
+                                    <button type="button" class="btn-search">검색</button>
+                                </div>
+                            </td>
                             <td class="txt-c">2024.03.15</td>
                         </tr>
                     </tbody>
