--- a/work/ILP_001.html
+++ b/work/ILP_001.html
@@ -81,7 +81,7 @@
     </div>
     <div class="container wrap">
         <div class="page-header">
-            <h2 class="page-header-tit">이용권 사용기관 신청</h2>
+            <h2 class="page-header-tit">평생교육이용권 사용기관 신청</h2>
             <p class="page-header-desc">평생교육이용권 이용을 위한 사용기관 신청 화면입니다.</p>
         </div>
 
