--- a/work/IMP_001.html
+++ b/work/IMP_001.html
@@ -74,6 +74,10 @@
                     <input type="password" id="pw" placeholder="비밀번호를 입력하세요.">
                 </div>
                 <button type="button" class="btns layer-btn" onclick="$('[data-pop=pop-1]').show();">로그인</button>   
+                <div class="find-info">
+                    <a href="#">아이디 찾기</a>
+                    <a href="#">비밀번호 찾기</a>
+                </div>
             </div>
             <a href="#" class="register-btn g layer-btn" onclick="$('[data-pop=pop-2]').show();">
                 <img src="../images/biz2/ic_register.svg" alt="사용기관 등록 이미지">
