--- a/work/IMP_011.html
+++ b/work/IMP_011.html
@@ -166,6 +166,7 @@
             <li>전자우편주소 및 휴대전화번호를 모르실 경우 평생교육이용권 콜센터 (지역번호 없이) 1600-3005으로 연락하여 주십시오.</li>
         </ul>
         <div class="btns-bottom">
+            <a href="javascript:;" class="btn-bd green">취소</a>
             <a href="javascript:;" class="btns">찾기</a>
         </div>
     </div>
