--- a/work/LAP_102.html
+++ b/work/LAP_102.html
@@ -201,14 +201,14 @@
                     <p class="color-primary">주민등록 상 충청남도 홍성군 거주</p>
                     <div class="price-wrap">
                         <span class="price">100,000원</span>
-                        <span class="box">1914.07.15~2005.07.15 출생</span>
+                        <span class="box">1914-07-15~2005-07-15 출생</span>
                     </div> 
                     <ul class="bullet-list">
                         <li>자격요건 : 무관</li>
                         <li>장애 여부 : 무관</li>
                         <li>장학재단 중복 수혜 : 허용안함</li>
                         <li>자격요건 : 무관</li>
-                        <li>신청기간 : 2024.08.01 (10시) ~ 2024.11.30 (18시)</li>
+                        <li>신청기간 : 2024-08-01 (10시) ~ 2024-11-30 (18시)</li>
                     </ul>
                 </div>
                 <button type="button" class="btns layer-btn bg-blue" onclick="$('[data-pop=is-auth]').show();">선택</button>
@@ -219,14 +219,14 @@
                     <p class="color-primary">주민등록 상 충청남도 홍성군 거주</p>
                     <div class="price-wrap">
                         <span class="price">100,000원</span>
-                        <span class="box">1914.07.15~2005.07.15 출생</span>
+                        <span class="box">1914-07-15~2005-07-15 출생</span>
                     </div> 
                     <ul class="bullet-list">
                         <li>자격요건 : 무관</li>
                         <li>장애 여부 : 무관</li>
                         <li>장학재단 중복 수혜 : 허용안함</li>
                         <li>자격요건 : 무관</li>
-                        <li>신청기간 : 2024.08.01 (10시) ~ 2024.11.30 (18시)</li>
+                        <li>신청기간 : 2024-08-01 (10시) ~ 2024-11-30 (18시)</li>
                     </ul>
                 </div>
                 <button type="button" class="btns bg-blue">선택</button>
