--- a/work/LAP_400.html
+++ b/work/LAP_400.html
@@ -206,45 +206,38 @@
                         </tr>
                         <!-- 조회 데이터 없을 시 -->
                         <tr>
-                            <td colspan="8">데이터 없음 안내 문구</td>
+                            <td colspan="8">신청 내역이 없습니다.</td>
                         </tr>
                     </tbody>
                 </table>
             </div>
-            <ul class="sm-show-800">
-                <li>
-                    <strong>사업년도 :</strong>
-                    <p>2024</p>
-                </li>
-                <li>
-                    <strong>지역 :</strong>
-                    <p>서울특별시</p>
-                </li>
-                <li>
-                    <strong>이용권 유형 :</strong>
-                    <p>디지털</p>
-                </li>
-                <li>
-                    <strong>신청일자 :</strong>
-                    <p>204-01-02</p>
-                </li>
-                <li>
-                    <strong>성명 :</strong>
-                    <p>홍길동</p>
-                </li>
-                <li>
-                    <strong>성명 :</strong>
-                    <p>2000-01-12</p>
-                </li>
-                <li>
-                    <strong>연락처 :</strong>
-                    <p>010-1212-1212</p>
-                </li>
-                <li>
-                    <strong>처리상태 :</strong>
-                    <p>처리중</p>
-                </li>
-            </ul>
+            <div class="table-list class-list sm-show-800">
+                <ul>
+                    <li>
+                        <p><strong class="list-label">사업년도</strong><span>2024</span></p>
+                        <p><strong class="list-label">지역</strong><span>서울특별시</span></p>
+                        <p><strong class="list-label">이용권 유형</strong><span>디지털</span></p>
+                        <p><strong class="list-label">신청일자</strong><span>2024-01-02</span></p>
+                        <p><strong class="list-label">성명</strong><span>홍길동</span></p>
+                        <p><strong class="list-label">생년월일</strong><span>2000-01-12</span></p>
+                        <p><strong class="list-label">연락처</strong><span>010-1212-1212</span></p>
+                        <p><strong class="list-label">처리상태</strong><span>처리중</span></p>
+                    </li>
+                    <li>
+                        <p><strong class="list-label">사업년도</strong><span>2024</span></p>
+                        <p><strong class="list-label">지역</strong><span>서울특별시</span></p>
+                        <p><strong class="list-label">이용권 유형</strong><span>디지털</span></p>
+                        <p><strong class="list-label">신청일자</strong><span>2024-01-02</span></p>
+                        <p><strong class="list-label">성명</strong><span>홍길동</span></p>
+                        <p><strong class="list-label">생년월일</strong><span>2000-01-12</span></p>
+                        <p><strong class="list-label">연락처</strong><span>010-1212-1212</span></p>
+                        <p><strong class="list-label">처리상태</strong><span>처리중</span></p>
+                    </li>
+                    <li>
+                        <p>신청 내역이 없습니다.</p>
+                    </li>
+                </ul>
+            </div>
             <div class="paging ">
                 <span class="pg">
                     <a href="#" class="prev">
