--- a/work/LIP_300.html
+++ b/work/LIP_300.html
@@ -176,6 +176,17 @@
                                     </select>
                                 </dd>                    
                             </dl>
+                            <dl>
+                                <dt><label for="srch-02">차수</label></dt>
+                                <dd>
+                                    <select name="" id="srch-02">
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                    </select>
+                                </dd>
+                            </dl>
                             <button type="submit" class="btns">검색<span class="lg-only">하기</span></button>
                         </div>
                     </fieldset>
@@ -217,7 +228,7 @@
                             <td>1</td>
                             <td>유비온원격평생교육시설</td>
                             <td>가족관계론</td>
-                            <td>2022.03.01 ~ 2024.12.31</td>
+                            <td>2022-03-01 ~ 2024-12-31</td>
                             <td>1일</td>
                             <td>이수</td>
                             <td>전송대기</td>
@@ -228,7 +239,7 @@
                             <td>2</td>
                             <td>유비온원격평생교육시설</td>
                             <td>중국어회화 전 강좌 패키지[180일](교재 포함)(23년 7월)</td>
-                            <td>2022.03.01 ~ 2024.12.31</td>
+                            <td>2022-03-01 ~ 2024-12-31</td>
                             <td>1일</td>
                             <td>이수</td>
                             <td>전송대기</td>
@@ -242,7 +253,7 @@
                     <li>
                         <p><strong class="list-label">사용기관명</strong><span class="list-bold">유비온원격평생교육시설</span></p>
                         <p><strong class="list-label">강좌명</strong><span>중국어회화 전 강좌 패키지[180일](교재 포함)(23년 7월)</span></p>
-                        <p><strong class="list-label">강좌기간</strong><span>2022.03.01~2024.12.31</span></p>
+                        <p><strong class="list-label">강좌기간</strong><span>2022-03-01~2024-12-31</span></p>
                         <p><strong class="list-label">출석/일수/시간/회차</strong><span>1일</span></p>
                         <p><strong class="list-label">이수여부</strong><span>이수</span></p>
                         <p><strong class="list-label">계좌제연계</strong><span class="list-point">전송대기</span></p>
@@ -251,7 +262,7 @@
                     <li>
                         <p><strong class="list-label">사용기관명</strong><span class="list-bold">유비온원격평생교육시설</span></p>
                         <p><strong class="list-label">강좌명</strong><span>중국어회화 전 강좌 패키지[180일](교재 포함)(23년 7월)</span></p>
-                        <p><strong class="list-label">강좌기간</strong><span>2022.03.01~2024.12.31</span></p>
+                        <p><strong class="list-label">강좌기간</strong><span>2022-03-01~2024-12-31</span></p>
                         <p><strong class="list-label">출석/일수/시간/회차</strong><span>1일</span></p>
                         <p><strong class="list-label">이수여부</strong><span>이수</span></p>
                         <p><strong class="list-label">계좌제연계</strong><span class="list-point">전송대기</span></p>
