--- a/work/LIP_500.html
+++ b/work/LIP_500.html
@@ -153,13 +153,13 @@
         <div class="top-location-area wrap">
             <span class="home"><span class="blind">홈</span></span>
             <div class="location-box">
-                <span class="arrow">이용권 선정결과</span>
+                <span class="arrow">평생교육이용권 선정결과</span>
             </div>
         </div>
     </div>
     <div class="container wrap">
         <div class="page-header">
-            <h2 class="page-header-tit">이용권 선정결과</h2>
+            <h2 class="page-header-tit">평생교육이용권 선정결과</h2>
         </div>
         <div class="contents ticket-result">
             <div class="top-info-group">
