--- a/work/LMP_002.html
+++ b/work/LMP_002.html
@@ -198,7 +198,7 @@
                                         <p class="main-notice-tit">
                                             지자체 평생교육이용권 시스템 일시중단 안내
                                         </p>
-                                        <span class="main-notice-date">2024.10.25</span>
+                                        <span class="main-notice-date">2024-10-25</span>
                                     </a>
                                 </li>
                                 <li class="swiper-slide">
@@ -208,7 +208,7 @@
                                             <strong>[울산광역시]</strong>
                                             2024년 울산 평생교육이용권(이용권) 2차 신청 안내
                                         </p>
-                                        <span class="main-notice-date">2024.10.25</span>
+                                        <span class="main-notice-date">2024-10-25</span>
                                     </a>                            
                                 </li>
                                 <li class="swiper-slide">
@@ -218,7 +218,7 @@
                                             <strong>[울산광역시]</strong>
                                             2024년 울산 평생교육이용권(이용권) 2차 신청 안내
                                         </p>
-                                        <span class="main-notice-date">2024.10.25</span>
+                                        <span class="main-notice-date">2024-10-25</span>
                                     </a>
                                 </li>
                             </ul>
