--- a/work/LNP_101.html
+++ b/work/LNP_101.html
@@ -217,13 +217,17 @@
                     </tbody>
                 </table>
                 <ul class="article-list">
-                    <li class="prev-list">
-                        <span class="ico">이전 글</span> 
-                        2024년 평생교육이용권 우수 이용자 재충전 신청 매뉴얼
+                    <li class="prev-list">                            
+                        <a href="#" class="ico">이전 글</a>
+                        <a href="#">
+                            2024년 평생교육이용권 우수 이용자 재충전 신청 매뉴얼
+                        </a> 
                     </li>
                     <li class="next-list">
-                        <a href="javascript:;" class="ico">다음 글</a>
-                        평생교육이용권 사용기관 업무매뉴얼
+                        <a href="#" class="ico">다음 글</a>
+                        <a href="#">
+                            평생교육이용권 사용기관 업무매뉴얼
+                        </a>
                     </li>
                 </ul>
                 <div class="btns-bottom">
