--- a/work/LNP_202.html
+++ b/work/LNP_202.html
@@ -152,14 +152,14 @@
             <span class="home"><span class="blind">홈</span></span>
             <div class="location-box">
                 <span class="arrow">게시판</span>
-                <span class="arrow">자료실</span>
-                <span class="arrow">자료실 상세</span>
+                <span class="arrow">자주하는 질문</span>
+                <span class="arrow">자주하는 질문 상세</span>
             </div>
         </div>
     </div>
     <div class="container wrap">
         <div class="page-header">
-            <h2 class="page-header-tit">자주하는질문 상세</h2>
+            <h2 class="page-header-tit">자주하는 질문 상세</h2>
         </div>
         <div class="contents qna">
             <div class="top-info-group">
