--- a/work/LNP_302.html
+++ b/work/LNP_302.html
@@ -269,7 +269,7 @@
             </div>
             <div class="btns-bottom">
                 <button type="button" class="btns">목록</button>
-                <button type="button" class="btns">등록</button>
+                <button type="button" class="btns">수정</button>
             </div>
         </div>
     </div>
