--- a/work/LUP_001.html
+++ b/work/LUP_001.html
@@ -391,6 +391,22 @@
             <div class="table-list sm-show-800">
                 <ul>
                     <li>
+                        <p><strong class="list-label">주소</strong><span>서울특별시 노원구</span></p>
+                    </li>
+                    <li>
+                        <p><strong class="list-label">기관구분</strong><span>오프라인</span></p>
+                    </li>
+                    <li>
+                        <p><strong class="list-label">홈페이지 주소</strong><span>www.test.co.kr</span></p>
+                    </li>
+                    <li>
+                        <p><strong class="list-label">기관 연계사업 유형</strong><span><img src="../images/biz2/ico/ico_organ02.svg" alt="기관 연계사업 유형"></span></p>
+                    </li>
+                </ul>
+
+
+                <ul>
+                    <li>
                         <strong>(주)중앙자동차운전전문학원</strong> 
                         <img src="../images/biz2/ico/ico_map.svg" alt="지도">
                         <span class="new">NEW</span>
