--- a/work/temp_paging.html
+++ b/work/temp_paging.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     
-    <!-- 페이지 구조 변경 2025.01.03 -->
+    <!-- 페이지 구조 변경 2025-01-03 -->
     <div class="paging ">
         <span class="pg">
             <a href="#" class="prev">
