--- a/work/IIP_100.html
+++ b/work/IIP_100.html
@@ -76,13 +76,13 @@
             <span class="home"><span class="blind">홈</span></span>
             <div class="location-box">
                 <span class="arrow">사용기관</span>
-                <span class="arrow">이용권 사용내역</span>
+                <span class="arrow">평생교육이용권 사용내역</span>
             </div>
         </div>
     </div>
     <div class="container wrap">
         <div class="page-header">
-            <h2 class="page-header-tit">이용권 사용내역</h2>
+            <h2 class="page-header-tit">평생교육이용권 사용내역</h2>
         </div>
         <div class="contents">
             <div class="top-info-group">
@@ -119,7 +119,7 @@
                                 </dd>                    
                             </dl>
                             <dl>
-                                <dt><label for="srch02">이용권 구분</label></dt>
+                                <dt><label for="srch02">평생교육이용권 구분</label></dt>
                                 <dd>
                                     <select name="" id="srch02">
                                         <option value="">전체</option>
@@ -224,7 +224,7 @@
                     <tbody>
                         <tr>
                             <td>배치</td>
-                            <td>2024.06.21<br>
+                            <td>2024-06-21<br>
                                 09:09:00</td>
                             <td>12341234</td>
                             <td>10,000</td>
@@ -244,7 +244,7 @@
                         </tr>
                         <tr>
                             <td>배치</td>
-                            <td>2024.06.21<br>
+                            <td>2024-06-21<br>
                                 09:09:00</td>
                             <td>12341234</td>
                             <td>10,000</td>
@@ -261,6 +261,9 @@
                                     <span class="blind">매핑완료</span>
                                 </button>
                             </td>
+                        </tr>
+                        <tr>
+                            <td colspan="9">사용 내역이 없습니다.</td>
                         </tr>
                     </tbody>
                 </table>
@@ -365,7 +368,7 @@
                             <tbody>
                                 <tr>
                                     <td>광진*</td>
-                                    <td>1988.01.04</td>
+                                    <td>1988-01-04</td>
                                     <td>010-4120-****</td>
                                     <td>liet*@*.com</td>
                                 </tr>
@@ -464,10 +467,10 @@
                     </div>
                     <div class="layer-text-box">
                         <ul class="layer-text-list">
-                            <li class="layer-text-tit color-red">※ 학습자 정보 추가 전 유의사항</li>
-                            <li class="layer-text-desc">- <em class="color-blue">이용권 카드 본인사용 확인</em>(카드결제 정보내 이름과 실제 수강자명 일치여부 확인</li>
-                            <li class="layer-text-desc">- 평생교육강좌 수강료 및 이에 해당하는 교재 외 결제, 등록불가(교재 단독 결제 불가)</li>
-                            <li class="layer-text-desc" >※ 평생교육이용권 본인외 사용 및 목적외 사용 확인시 이용자 안내 후 카드 취소 처리 요청</li>
+                            <li class="layer-text-tit color-red"><strong>※ 학습자 정보 추가 전 유의사항</strong></li>
+                            <li class="layer-text-desc"><span class="dash">-</span> <em class="color-blue"> 이용권 카드 본인사용 확인</em>(카드결제 정보내 이름과 실제 수강자명 일치여부 확인)</li>
+                            <li class="layer-text-desc"><span class="dash">-</span> 평생교육강좌 수강료 및 이에 해당하는 교재 외 결제, 등록불가(교재 단독 결제 불가)</li>
+                            <li class="layer-text-desc">※ 평생교육이용권 본인외 사용 및 목적외 사용 확인시 이용자 안내 후 카드 취소 처리 요청</li>
                         </ul>
                     </div>
                     <div class="layer-btn-wrap">
@@ -506,14 +509,14 @@
                                 <tbody>
                                     <tr>
                                         <td>평생교육강좌</td>
-                                        <td>2024.11.13 ~ 2024.12.31</td>
+                                        <td>2024-11-13 ~ 2024-12-31</td>
                                         <td>44일</td>
                                         <td>이수중</td>
                                         <td>학습미이수</td>
                                     </tr>
                                     <tr>
                                         <td>평생교육강좌</td>
-                                        <td>2024.11.13 ~ 2024.12.31</td>
+                                        <td>2024-11-13 ~ 2024-12-31</td>
                                         <td>44일</td>
                                         <td>이수중</td>
                                         <td>학습미이수</td>
