--- a/work/IIP_401.html
+++ b/work/IIP_401.html
@@ -291,13 +291,12 @@
                         </tr>
                         <tr>
                             <th class="txt-l"><label for="aa">검색 키워드</label></th>
-                            <td class="input-group" colspan="5">
+                            <td class="input-group search-keyword" colspan="5">
                                 <div class="flex-ac">
                                     <input type="text" id="aa" class="fixed-width">
                                     <input type="text" class="fixed-width">
                                     <input type="text" class="fixed-width">
                                 </div>
-                                <p class="bullet">최대 10자까지 입력가능하며, 비속어 등 입력 시, 이용이 제한됩니다.</p>
                             </td>
                         </tr>
                     </tbody>
@@ -583,48 +582,6 @@
                     </div>
                 </div>
                 <button class="close-btn" onclick="$('[data-pop=pop-1]').hide();"><span class="blind">레이어 팝업 닫기</span></button>
-            </div>
-        </div>
-    </div>
-    <div class="layer-pop" data-pop="pop-2">
-        <div class="layer-content" style="--max-width: 840px">
-            <div class="layer-scroll">
-                <span class="title">평생교육프로그램 6대 영역별 분류</span>
-                <div class="info-area">
-                    <div class="text-box">
-                        <p class="txt">평생교육이용권 홈페이지에서 제공하는 인터넷 관련 서비스를 원활하게 수행하기 위하여 개인정보의 수집.유출.오용.남용으로부터 사생활의 비밀 등을 보호하도록 한 개인정보보호법 규정에 따라 다음과 같이 수집·이용 됩니다.</p>
-                        <div class="table-group">
-                            <span class="tit">개인정보 수집 · 이용 동의</span>
-                            <table>
-                                <caption>개인정보 수집 · 이용 동의에 관한 테이블이며 항목, 수집이용 목적, 보유기간 등으로 구성되어 있음</caption>
-                                <colgroup>
-                                    <col style="width:218px;">
-                                    <col style="width:291px;">
-                                    <col style="width:159px;">
-                                </colgroup>
-                                <thead>
-                                    <tr>
-                                        <th>항목</th>
-                                        <th>수집 · 이용 목적</th>
-                                        <th>보유기간</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>회원 계정정보(ID, 비밀번호), 암호화된 이용자 확인 값(CI), 회원가입동의여부, 평생학습계좌번호</td>
-                                        <td>- 평생학습계좌제 학습계좌 발급 및 학습이력관리<br>- 평생교육이용권 홈페이지 회원관리</td>
-                                        <td class="center">5년, 회원탈퇴 시까지</td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                        <p class="txt">※ 위의 개인정보 수집 · 이용에 대한 동의를 거부할 권리가 있으며, 동의 거부 시 평생교육이용권 신청 · 선정 · 지급에는 제한이 없으나 부가서비스 제공은 제한을 받습니다.</p>
-                    </div>
-                    <div class="btn-box">
-                        <button onclick="$('[data-pop=pop-2]').hide();">확인</button>
-                    </div>
-                </div>
-                <button class="close-btn" onclick="$('[data-pop=pop-2]').hide();"><span class="blind">레이어 팝업 닫기</span></button>
             </div>
         </div>
     </div>
