--- a/work/IMP_002.html
+++ b/work/IMP_002.html
@@ -104,7 +104,7 @@
                                             <span class="txt">
                                                 지자체 평생교육이용권 시스템 일시중단 안내
                                             </span>
-                                            <span class="day">2024.10.25</span>
+                                            <span class="day">2024-10-25</span>
                                         </a>
                                     </div>
                                     <div class="swiper-slide">
@@ -112,7 +112,7 @@
                                             <span class="category-label lottery">추첨·선정</span>
                                             <span class="txt">
                                                 <strong>[울산광역시]</strong>2024년 울산 평생교육이용권(이용권) 2차 신청안내</span>
-                                            <span class="day">2024.10.25</span>
+                                            <span class="day">2024-10-25</span>
                                         </a>
                                     </div>
                                     <div class="swiper-slide">
@@ -120,7 +120,7 @@
                                             <span class="category-label apply">신청·접수</span>
                                             <span class="txt">
                                                 <strong>[울산광역시]</strong> 2024년 울산 평생교육이용권(이용권) 2차 신청안내</span>
-                                            <span class="day">2024.10.25</span>
+                                            <span class="day">2024-10-25</span>
                                         </a>
                                     </div>
                                 </div>
