--- a/work/INP_200.html
+++ b/work/INP_200.html
@@ -281,7 +281,7 @@
                                 <thead>
                                     <tr>
                                         <th>번호</th>
-                                        <th>구분</th>
+                                        <th>이용권 유형</th>
                                         <th>제목</th>
                                         <th>작성자</th>
                                         <th>작성일</th>
