--- a/work/LAP_105.html
+++ b/work/LAP_105.html
@@ -193,13 +193,13 @@
 
         <div class="complete-area">
             <div class="complete-wrap border-box">
-                <strong><span class="color-primary">홍길동</span> 님의 차수 추가 신청이 완료되었습니다.</strong>
-                <p class="mssg">신청서에 입력한 회원 아이디로 접속하여 신청된 내용을 확인하세요.<br>학습계획서 제출은 선택 사항이나, 경합 시 학습계획서 제출자를 우선 선발합니다</p>
+                <strong><span class="color-primary">홍길동</span>님의 평생교육이용권 신청이 완료되었습니다.</strong>
+                <p class="mssg">본인인증을 통해 접속하여 신청된 내용을 확인하세요.<br>학습계획서 제출은 선택 사항이나, 경합 시 학습계획서 제출자를 우선 선발합니다.</p>
             </div>
             <p class="bullet">온라인 신청과 오프라인 신청 중 하나만 신청하시기 바랍니다.</p>
         </div>
         <div class="page-header">
-            <h2 class="page-header-tit">신청정보 확인 및 신청완료</h2>
+            <h2 class="page-header-tit">신청내역</h2>
         </div>
         <div class="top-info-group">
             <h3>신청인 정보</h3>
@@ -215,16 +215,10 @@
                 </colgroup>
                 <tbody>
                     <tr>
-                        <th class="txt-l">신청인 이름</th>
+                        <th class="txt-l">성명</th>
                         <td>홍길동</td>
                         <th class="txt-l">생년월일</th>
-                        <td>2000.01.01</td>
-                    </tr>
-                    <tr>
-                        <th class="txt-l">지급수단</th>
-                        <td>선불카드(개인)</td>
-                        <th class="txt-l">지급기관</th>
-                        <td>신한카드</td>
+                        <td>2000-01-01</td>
                     </tr>
                     <tr>
                         <th class="txt-l">휴대전화번호</th>
@@ -242,20 +236,12 @@
                 </colgroup>
                 <tbody>
                     <tr>
-                        <th class="txt-l">신청인 이름</th>
+                        <th class="txt-l">성명</th>
                         <td>홍길동</td>
                     </tr>
                     <tr>
                         <th class="txt-l">생년월일</th>
-                        <td>2000.01.01</td>
-                    </tr>
-                    <tr>
-                        <th class="txt-l">지급수단</th>
-                        <td>선불카드(개인)</td>
-                    </tr>
-                    <tr>
-                        <th class="txt-l">지급기관</th>
-                        <td>신한카드</td>
+                        <td>2000-01-01</td>
                     </tr>
                     <tr>
                         <th class="txt-l">휴대전화번호</th>
@@ -272,41 +258,62 @@
             <h3>지원자대상 정보</h3>
         </div>
         <div class="com-view-table">
-            <table>
+            <table class="lg-only">
                 <caption>신청인 정보 입력란</caption>
                 <colgroup>
-                    <col style="width: 13%;">
+                    <col style="width: 15%;">
                     <col>
+                    <col style="width: 15%;">
                     <col>
-                    <col>
-                    <col>
+                    <col style="width: 15%;">
                 </colgroup>
                 <thead>
                     <tr>
-                        <th scope="col">&nbsp;</th>
-                        <th colspan="2" scope="colgroup">2024학년도</th>
-                        <th colspan="2" scope="colgroup">2025학년도</th>
-                    </tr>
-                    <tr>
-                        <th scope="row">&nbsp;</th>
-                        <th scope="col">이용권 신청여부</th>
-                        <th scope="col">신청가능금액</th>
-                        <th scope="col">이용권 신청여부</th>
-                        <th scope="col">신정가능금액</th>
+                        <th>지역</th>
+                        <th>이용권 유형</th>
+                        <th>차수</th>
+                        <th>기간</th>
+                        <th>이용권 금액</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <th scope="row">&nbsp;</th>
-                        <td>신청가능</td>
-                        <td class="txt-r color-blue">4,000,000</td>
-                        <td>대상자 아님</td>
-                        <td class="txt-r">0</td>
+                        <td>서울</td>
+                        <td>지역특화이용권</td>
+                        <td>1</td>
+                        <td>2024-01-01 ~ 2024-01-12</td>
+                        <td class="txt-r">350,000원</td>
                     </tr>
-                    <tr class="total">
-                        <th scope="row">신청가능 총 금액</th>
-                        <td colspan="2" class="txt-r">4,000,000</td>
-                        <td colspan="2" class="txt-r">0</td>
+                </tbody>
+            </table>
+        </div>
+        <div class="com-write-table">
+            <table class="sm-show-800">
+                <caption>지원자대상 정보 입력란</caption>
+                <colgroup>
+                    <col style="width: 200px;">
+                    <col>
+                </colgroup>
+                <tbody>
+                    <tr>
+                        <th class="txt-l">지역</th>
+                        <td>서울</td>
+                    </tr>
+                    <tr>
+                        <th class="txt-l">이용권 유형</th>
+                        <td>지역특화이용권</td>
+                    </tr>
+                    <tr>
+                        <th class="txt-l">차수</th>
+                        <td>1</td>
+                    </tr>
+                    <tr>
+                        <th class="txt-l">기간</th>
+                        <td>2024-01-01 ~ 2024-01-12</td>
+                    </tr>
+                    <tr>
+                        <th class="txt-l">이용권 금액</th>
+                        <td>350,000원</td>
                     </tr>
                 </tbody>
             </table>
