--- a/work/LAP_301.html
+++ b/work/LAP_301.html
@@ -170,7 +170,7 @@
                     </colgroup>
                     <tbody>
                         <tr>
-                            <td class="gray-05-f8 txt-r"><strong>신청기간: </strong><span class="txt-bold">2022.01.06 ~ 2022.03.31</span></td>
+                            <td class="gray-05-f8 txt-r"><strong>신청기간: </strong><span class="txt-bold">2022-01-06 ~ 2022-03-31</span></td>
                         </tr>
                     </tbody>
                 </table>
@@ -280,7 +280,7 @@
                     <tbody>
                         <tr>
                             <th class="txt-l">신청기간</th>
-                            <td>2022.01.06 ~ 2022.03.31</td>
+                            <td>2022-01-06 ~ 2022-03-31</td>
                         </tr>
                         <tr>
                             <th class="txt-l">성명</th>
@@ -396,7 +396,7 @@
                 <h3 class="title">참고</h3>
                 <ul class="bullet-list">
                     <li>평생교육이용권 사용금액이 0원인 대상자만 이용권 이용자 선정 취소신청이 가능합니다. 이용권 사용금액이 발생한 경우, 해지가 불가하오니 확인 후 신청 바랍니다.</li>
-                    <li>이용권 선정 취소 기간(2022.01.06~2022.03.31) 내 ‘취소신청＇시, 차년도 패널티가 적용되지 않습니다.</li>
+                    <li>이용권 선정 취소 기간(2022-01-06~2022-03-31) 내 ‘취소신청＇시, 차년도 패널티가 적용되지 않습니다.</li>
                     <li>선정 취소 신청자는 당해년도 평생교육이용권 재신청이 불가합니다.</li>
                     <li>취소 신청서 제출 후, 취소 신청 및 변경은 불가하오니 신중하게 검토, 제출하여 주시기 바랍니다.</li>
                 </ul>
