--- a/work/LNP_002.html
+++ b/work/LNP_002.html
@@ -222,13 +222,18 @@
                     </tbody>
                 </table>
                 <ul class="article-list">
-                    <li class="prev-list">
-                        <span class="ico">이전 글</span> 
-                        [울산광역시] 2024년 울산 평생교육이용권(이용권) 2차 신청 접수 공고
+                    <li class="prev-list">                            
+                        <a href="#" class="ico">이전 글</a>
+
+                        <a href="#">
+                            [울산광역시] 2024년 울산 평생교육이용권(이용권) 2차 신청 접수 공고
+                        </a> 
                     </li>
                     <li class="next-list">
-                        <a href="javascript:;" class="ico">다음 글</a>
-                        [울산광역시] 2024년 울산 평생교육이용권(이용권) 2차 신청 접수 공고
+                        <a href="#" class="ico">다음 글</a>
+                        <a href="#">
+                            [울산광역시] 2024년 울산 평생교육이용권(이용권) 2차 신청 접수 공고
+                        </a>
                     </li>
                 </ul>
                 <div class="btns-bottom">
